# hitas

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  package.json  sonar-project.properties
backend/: .coveragerc  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  azure-pipelines-build-test-staging.yml  azure-pipelines-build.yml  azure-pipelines-dev.yml  azure-pipelines-prod.yml  azure-pipelines-staging.yml  azure-pipelines-test.yml  docker-compose.yml  docker-entrypoint.sh  format.sh  initial.json  nginx.conf  openapi.yaml  oracle.md  pyproject.toml  setup.cfg  uwsgi.ini
backend/config/: settings.py  urls.py  utils.py  wsgi.py
backend/hitas/: apps.py  error_handlers.py  exceptions.py  financing_types.py  healthcheck.py  types.py  urls.py  utils.py  wsgi.py
backend/hitas/admin/: __init__.py  apartment.py  apartment_sale.py  audit_log.py  codes.py  condition_of_sale.py  email_template.py  external_sales_data.py  housing_company.py  indices.py  owner.py  pdf_body.py  person.py  postal_code.py  property_manager.py  thirty_year_regulation.py
backend/hitas/calculations/: __init__.py  construction_time_interest.py  depreciation_percentage.py  exceptions.py  helpers.py  improvement.py  max_price.py
backend/hitas/calculations/improvements/: common.py  rules_2011_onwards.py  rules_pre_2011_cpi.py  rules_pre_2011_mpi.py
backend/hitas/calculations/max_prices/: __init__.py  max_price.py  rules.py  rules_2011_onwards.py  rules_pre_2011.py  types.py
backend/hitas/helauth/: pipelines.py  types.py  utils.py
backend/hitas/management/commands/: hitasmigrate.py  token.py
backend/hitas/migrations/: 0001_initial.py  0002_alter_apartment_share_number_start.py  0002_remove_housingcompany_state.py  0003_legacy_code_number_length.py  0003_remove_financing_method.py  0004_postal_code_changes.py  0004_remove_apartment_state.py  0005_emailtemplate.py  0005_unique_postal_code.py  0006_alter_email_template.py  0006_floor_to_string.py  0007_completion_date_to_apartment.py  0007_pdfbody.py  0008_remove_postal_code_from_real_estate_building_apartment.py  0008_remove_property_manager_address.py  0009_job_performance_multi_relation.py  0009_rename_owner_ownership.py  0010_interest_migration.py  0010_share_number_gte_1.py  0011_apartment_prices_update.py  0011_rename_interest_fields.py  0012_apartment_database_constraints.py  0012_nonobfuscatedowner.py  0013_apartment_notes_null.py  0013_format_real_estate_property_identifiers.py  0014_apartment_updated_acquisition_price.py  0014_soft_delete.py  0015_housing_company_cascade.py  0015_housingcompanydocument_aparmentdocument.py  0016_apartment_hitas_apartment_share_number_both_set.py  0016_external_report_view.py  0017_alter_aparmentdocument_modified_at_and_more.py  0017_fix_unique_housing_company_names.py  0017_unique_housing_company_names.py  0018_noop_migration_from_upgrade.py  0018_unique_housing_company_names.py  0019_alter_financingmethod_options.py  0019_ownership_uuid.py  0020_add_apartment_number_integer.py  0020_improvements.py  (+67 more)
backend/hitas/models/: __init__.py  _base.py  apartment.py  apartment_sale.py  areas.py  building.py  codes.py  condition_of_sale.py  document.py  email_template.py  external_sales_data.py  housing_company.py  indices.py  job_performance.py  migration_done.py  owner.py  ownership.py  pdf_body.py  person.py  postal_code.py  property_manager.py  real_estate.py  sale.py  thirty_year_regulation.py  utils.py
backend/hitas/oracle_migration/: cost_areas.py  financing_types.py  globals.py  oracle_schema.py  runner.py  types.py  utils.py
backend/hitas/oracle_migration/oracle_schema/: __init__.py  codes.py  company.py  indices.py  metadata.py  misc.py  property_manager.py
backend/hitas/services/: apartment.py  apartment_sale.py  audit_log.py  condition_of_sale.py  email.py  external_sales_data.py  housing_company.py  indices.py  job_performance.py  owner.py  reports.py  thirty_year_regulation.py  validation.py
backend/hitas/templates/: confirmed_maximum_price.html  confirmed_maximum_price.jinja  regulation_continuation_letter.jinja  regulation_letter.jinja  unconfirmed_maximum_price.jinja
backend/hitas/templates/components/: apartment_info.jinja  base.jinja  calculation_details_table.jinja  improvements_table.jinja
backend/hitas/templatetags/: custom_tags.py
backend/hitas/tests/: conftest.py  runner.py  test_activity_log.py  test_app.py  test_auth.py  test_construction_time_interest.py  test_exceptions.py  test_improvements.py  test_max_price.py  test_merge.py  test_owner_obfuscation.py  test_properties.py  test_render.py  test_updated_acquisition_price.py  test_utils.py  test_validate_functions.py
backend/hitas/tests/apis/: conftest.py  helpers.py  test_api_apartment.py  test_api_apartment_list.py  test_api_apartment_max_price.py  test_api_apartment_sale.py  test_api_batch_complete_apartments.py  test_api_building.py  test_api_buildings.py  test_api_codes.py  test_api_condition_of_sale.py  test_api_csrf.py  test_api_document.py  test_api_email.py  test_api_email_template.py  test_api_external_sales_data.py  test_api_housing_companies_list.py  test_api_housing_company.py  test_api_housing_company_create.py  test_api_housing_company_read.py  test_api_housing_company_retrieve.py  test_api_indices.py  test_api_job_performance.py  test_api_owner.py  test_errors.py  (+16 more)
backend/hitas/views/: __init__.py  apartment.py  apartment_list.py  apartment_max_price.py  apartment_sale.py  building.py  codes.py  condition_of_sale.py  document.py  email.py  email_template.py  external_sales_data.py  health.py  helpers.py  housing_company.py  indices.py  job_performance.py  owner.py  ownership.py  paginator.py  pdf_body.py  person.py  postal_code.py  property_manager.py  real_estate.py  reports.py  sale.py  sales_catalog.py  thirty_year_regulation.py
backend/users/: admin.py  models.py  permissions.py  views.py
backend/users/migrations/: 0001_initial.py  0002_add_phone_and_title.py  0003_user_last_api_use.py
(+459 files in other folders)
