[tool.poetry]
name = "hitas"
version = "1.0.2"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.16"
django-environ = "^0.10.0"
psycopg2 = "^2.9.10"
drf-oidc-auth = "^3.0.0"
social-auth-app-django = "^5.4.2"
django-helusers = "^0.13.0"
django-filter = "^23.5"
Markdown = "^3.7"
djangorestframework = "^3.15.2"
django-nested-inline = "^0.4.6"
django-crum = "^0.7.9"
django-health-check = "^3.18.3"
drf-nested-routers = "^0.93.5"
django-cors-headers = "^4.5.0"
django-safedelete = "^1.4.0"
python-dateutil = "^2.9.0"
pytz = "^2024.2"
xhtml2pdf = "^0.2.16"
django-jinja = "^2.11.0"
num2words = "^0.5.13"
sentry-sdk = "^1.45.1"
tomli = "^2.0.2"
openpyxl = "^3.1.5"
django-auditlog = "^2.3.0"
django-post-fetch-hook = "0.0.2"
django-subforms = "^0.2.0"
django-enumfields2 = "^3.0.2" # Drop-in replacement for django-enumfields, which is not compatible with Python 3.11
django-storages = {extras = ["azure"], version = "^1.14.4"}

[tool.poetry.dependencies.uWSGI]
version = "^2.0.22"
# Skip installation on Windows as uWSGI does not support it without Cygwin.
# Windows users should use WSL for their local development virtualenv, but can
# still create another virtualenv in Windows without uWSGI for pre-commit hooks.
markers = "sys_platform != 'win32'"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pytest-freezegun = "^0.4.2"
factory-boy = "^3.3.0"
ipython = "^8.14.0"
openapi-core = "0.16.6" # Updating past this version breaks tests
testcontainers = {extras = ["postgresql"], version = "^3.7.1"}
django-debug-toolbar = "^3.8.1" # Updating to 4 breaks query count tests
pre-commit = "^3.3.3"
pypdf = "^3.15.2"
sqlparse = "^0.4.4"
pytest-xdist = "^3.3.1"

[tool.poetry.group.migration]
optional = true

[tool.poetry.group.migration.dependencies]
cx-Oracle = "^8.3.0"
sqlalchemy = "^1.4"
psycopg2-binary = "2.9.5"
faker = "^19"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--nomigrations"
filterwarnings = [
    "ignore::DeprecationWarning:openapi_core*",
]
norecursedirs = [
    "node_modules",
    ".cache",
]

[tool.black]
line_length = 120
target-version = ["py310"]
extend-exclude = "migrations"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "config/*",
    "manage.py",
    "*/management/*",
    "hitas/oracle_migration/*",
]

[tool.coverage.report]
exclude_lines = [
    "def __str__",
    "def __repr__",
]

[tool.ruff]
fix = true
target-version = "py310"
line-length = 120
extend-exclude = [
    "tests/*",
    "migrations/**",
]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "I",  # isort
    "S",  # flake8-bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "T",  # flake8-print
    "W",  # pycodestyle warnings
]
ignore = [
    "TID252",  # Relative imports allowed
    "S101",  # Asserts are allowed
    "B904",  # Allow raise without from clause
    "B905",  # Allow zip without explicit strict parameter
    "C417",  # map(...) is fine
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports allowed
"hitas/management/commands/hitasmigrate.py" = ["T201"]  # print allowed
"hitas/management/commands/token.py" = ["T201"]  # print allowed
"hitas/oracle_migration/runner.py" = ["T201"]  # print allowed

[tool.ruff.isort]
known-third-party = [
    "django",
    "rest_framework",
]

[tool.ruff.mccabe]
max-complexity = 19

[tool.bandit]
exclude_dirs = [
    "tests/*",
]
