[tool.poetry]
name = "hitas"
version = "1.0.2"
description = ""
authors = []

[tool.poetry.dependencies]
Django = "^4.2.16"
django-auditlog = "^2.3.0"
django-cors-headers = "^4.6.0"
django-crum = "^0.7.9"
django-enumfields2 = "^3.0.2" # Drop-in replacement for django-enumfields, which is not compatible with Python 3.11+
django-environ = "^0.11.2"
django-filter = "^24.3"
django-health-check = "^3.18.3"
django-helusers = "^0.13.0"
django-jinja = "^2.11.0"
django-nested-inline = "^0.4.6"
django-post-fetch-hook = "^0.0.3"
django-safedelete = "^1.4.0"
django-storages = {extras = ["azure"], version = "^1.14.4"}
django-subforms = "^0.3.1"
djangorestframework = "^3.15.2"
drf-nested-routers = "^0.94.1"
drf-oidc-auth = "^3.0.0"
Markdown = "^3.7"
num2words = "^0.5.13"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.10"
python = "^3.13"
python-dateutil = "^2.9.0"
sentry-sdk = "^1.45.1"
social-auth-app-django = "^5.4.2"
tomli = "^2.1.0"
xhtml2pdf = "^0.2.16"

[tool.poetry.dependencies.uWSGI]
version = "^2.0.22"
# Skip installation on Windows as uWSGI does not support it without Cygwin.
# Windows users should use WSL for their local development virtualenv, but can
# still create another virtualenv in Windows without uWSGI for pre-commit hooks.
markers = "sys_platform != 'win32'"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
factory-boy = "^3.3.1"
ipython = "^8.29.0"
openapi-core = "0.19.4"
pre-commit = "^4.0.1"
pypdf = "^5.1.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"
pytest-freezer = "^0.4.8"
pytest-xdist = "^3.6.1"
sqlparse = "^0.5.2"
testcontainers = {extras = ["postgresql"], version = "^3.7.1"}

[tool.poetry.group.migration]
optional = true

[tool.poetry.group.migration.dependencies]
cx-Oracle = "^8.3.0"
sqlalchemy = "^1.4"
psycopg2-binary = "2.9.10"
faker = "^19"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--nomigrations"
filterwarnings = [
    # ignore DeprecationWarning for ast.NameConstant in reportlab <= 4.2
    "ignore:^ast\\.NameConstant is deprecated and will be removed in Python 3\\.14\\; use ast\\.Constant instead$:DeprecationWarning:reportlab\\..*:0",
]
norecursedirs = [
    "node_modules",
    ".cache",
]

[tool.black]
line_length = 120
target-version = ["py310"]
extend-exclude = "migrations"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "config/*",
    "manage.py",
    "*/management/*",
    "hitas/oracle_migration/*",
]

[tool.coverage.report]
exclude_lines = [
    "def __str__",
    "def __repr__",
]

[tool.ruff]
fix = true
target-version = "py313"
line-length = 120
extend-exclude = [
    "tests/*",
    "migrations/**",
]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "I",  # isort
    "S",  # flake8-bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "T",  # flake8-print
    "W",  # pycodestyle warnings
]
ignore = [
    "TID252",  # Relative imports allowed
    "S101",  # Asserts are allowed
    "B904",  # Allow raise without from clause
    "B905",  # Allow zip without explicit strict parameter
    "C417",  # map(...) is fine
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports allowed
"hitas/management/commands/hitasmigrate.py" = ["T201"]  # print allowed
"hitas/management/commands/token.py" = ["T201"]  # print allowed
"hitas/oracle_migration/runner.py" = ["T201"]  # print allowed

[tool.ruff.isort]
known-third-party = [
    "django",
    "rest_framework",
]

[tool.ruff.mccabe]
max-complexity = 19

[tool.bandit]
exclude_dirs = [
    "tests/*",
]
